--- a/authentication.yaml
+++ b/authentication.yaml
@@ -1,4 +1,4 @@
-Token: BOT TOKEN HERE
+Token: MTA3NDg0OTMzNDU0NzQ1NjEzMg.G4d5s4.lkHffMw1Wv6Q2g51XOKUiO3VerM0UW7fVx9ZhU
 
 Introduction: If you don't know where to get your bot tokens, go to https://discord.com/developers/applications
   Create an application > Bot > Add Bot > Reveal Token
